[gd_scene load_steps=4 format=2]

[ext_resource path="res://Presentation/Login/Login.gd" type="Script" id=1]
[ext_resource path="res://Assets/LoginAssets/fblogin.PNG" type="Texture" id=3]
[ext_resource path="res://Assets/LoginAssets/googlelogin.png" type="Texture" id=4]

[node name="Login" type="Node2D"]
script = ExtResource( 1 )

[node name="GoogleLogin" type="TextureButton" parent="."]
margin_left = 300.042
margin_top = 382.62
margin_right = 682.042
margin_bottom = 474.62
rect_scale = Vector2( 0.5, 0.5 )
texture_normal = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="."]
margin_left = 232.791
margin_top = 215.415
margin_right = 617.792
margin_bottom = 346.415
text = "AdventureLearn"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FbLogin" type="TextureButton" parent="."]
margin_left = 283.143
margin_top = 297.593
margin_right = 486.143
margin_bottom = 343.593
texture_normal = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="GoogleLogin" to="." method="_on_LoginBtn_pressed"]
[connection signal="pressed" from="FbLogin" to="." method="_on_FbLogin_pressed"]
